refactor(backend): harden HTTP, Firestore queues, CI and typing
- HTTP control plane: GET /health, POST /admin/refresh with bearer
  auth, GlobalExceptionHandler, single-flight RefreshLock, in-process
  HttpServer on the admin.refresh.port (AGENTS §8/§9)
- Firestore pending/failed queues with 3-strike DLQ. Bootstrap
  enqueues new docs; refresh.max-retries drives the threshold
  (AGENTS §7). pending and failed are top-level collections rather
  than games subcollections to avoid collection-group queries
- GitHub Actions CI: mvn verify, JaCoCo report, matrix Java 17/21
  (AGENTS §9)
- Firestore retry with exponential backoff on transient gRPC codes;
  DocumentNotFoundException distinguishes deleted docs from backend
  failures (F-BUG-3/4)
- Stable pagination with orderBy(documentId) on readAll (F-BUG-1)
- Single source of truth for validation rules via MissingFieldRules;
  GameField.parseAll(Iterable) and InstantUtils.parseOrNull(String)
  replace duplicated parsers
- Typed RawgDocumentDto replaces Map<String,Object> in Firestore:
  renames in RawgDetails are now compile errors, not silent
  production bugs
- StringUtils.isBlank replaces 8 duplicated null/blank idioms
- SLF4J key=value logging in App.java; 38 println replaced
- New app mode 'serve' starts the HttpServer; bootstrap enqueues
  docs into pending; refresh.max-retries wired through

345/345 tests pass; mvn verify green; JaCoCo report generated.